--- a/app/components/table/style.css
+++ b/app/components/table/style.css
@@ -53,7 +53,7 @@
 }
 
 .edit-button {
-    @apply text-gray-400 hover:text-white transition;
+    @apply p-2 rounded-lg text-gray-400 hover:text-red-500 hover:bg-red-900/20 transition-colors duration-200 cursor-pointer;
 }
 
 .edit-icon {
