--- a/app/pilots/pilotListStyle.css
+++ b/app/pilots/pilotListStyle.css
@@ -1,9 +1,9 @@
 @import "tailwindcss";
 
 .toolbar {
-    @apply grid-cols-2
+    @apply mb-2;
 }
 
 .custom-button {
-    @apply m-3 p-3 bg-red-900 rounded-xl hover:bg-red-950 
+    @apply p-3 bg-red-900 rounded-xl hover:bg-red-950 text-white font-medium transition-colors duration-200 cursor-pointer;
 }
